icones nos links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header id="inicio">
-        <h1> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;Sheila Acunha</h1>
+        <h1> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;<ins>Sheila Acunha</ins></h1>
         <nav>
             <a href="#info">Minhas informações </a>&nbsp;&nbsp;
             <a href="#sobre">Sobre Mim</a>&nbsp;&nbsp;
@@ -30,30 +30,49 @@
 
         <section>
             <article>
-                <img src="./sheila.png" alt="foto de sheila">
+                <img src="./public/assets/sheila.png" alt="foto de sheila">
             </article>
             <article>
                 <ul>
                     <li>
                         <h2 id="info">Minhas Informações</h2>
                         <dl>
-                            <dt><strong>E-mail: </strong><a href="mailto:sheilaacunha1990@gmail.com"><abbr
-                                        title="para enviar e-mail click aqui">sheilaacunha1990@gmail.com</abbr></a></dt>
                             <dt><strong>Idade:</strong> 32 anos</dt>
                             <dt><strong>Cidade:</strong> Cachoeirinha - RS</dt>
+
                         </dl>
                     </li>
 
                     <li>
                         <h2 id="sobre">Sobre Mim</h2>
                         <dl>
-                            <dt><strong>O que me define:</strong> <q>Se definir é limitar-se.</q> </dt>
+                            <dt>
+                                <p><em>No momento estudando e a procura de um emprego em que eu possa encaixar com meu
+                                        curso.</em></p>
+                            </dt>
+                            <dt>
+                                <p> De tarde Estudo os cursinhos gratuitos da <a
+                                        href="https://www.rocketseat.com.br/">Rocketseat</a> e de noite as aulas da
+                                    <strong>Growdev.</strong>
+                                </p>
+                                <p>Gosto de patinar apesar de não sabe muito bem, mas sou teimosa. </p>
+                            </dt>
+                            <dt>
+                                <p><strong>O que me define:</strong> <q>Se definir é limitar-se.</q></p>
+                            </dt>
                         </dl>
                     </li>
                     <li>
                         <h2 id="conhecimentos">Conhecimentos</h2>
                         <dl>
-                            <dt><strong>Programa de Formação:</strong> <mark>Starter Full Stack Web</mark></dt>
+                            <dt>
+                                <p>
+                                    <strong>Programa de Formação:</strong><abbr
+                                        title="Para mais informações click no icone da Growdev logo abaixo">
+                                        <mark>Starter
+                                            Full Stack Web</mark></abbr>
+                                </p>
+                            </dt>
                             <dt><strong>Conhecimentos de Programação:</strong> Em aprendizado</dt>
                         </dl>
                     </li>
@@ -72,28 +91,25 @@
                 </ul>
             </article>
             <article>
-                <ul>
-                    <li id="redes">
-                        <a href="https://www.linkedin.com/in/sheilaacunha90/" target="_blank">Linkedin 🎭</a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/sheilaacunha/SheilaAcunha" target="_blank">GitHub 🐈‍⬛</a>
-                    </li>
-                    <li>
-                        <a href="https://open.spotify.com/playlist/3Yen6Cw2UE8MnGWQCKEygO?si=5c6a5ea3fa4b4b53"
-                            target="_blank">Spotify 🎼</a>
-                    </li>
-                    <li>
-                        <a href="https://www.growdev.com.br/starter-2" target="_blank">Growdev 📚</a>
-                    </li>
-                </ul>
+                <nav id="redes">
+                    <a href="https://www.linkedin.com/in/sheilaacunha90/" target="_blank"><img
+                            src="./public/assets/linkedin.png" alt="logo do linkedin"></a>&nbsp;&nbsp;
+                    <a href="mailto:sheilaacunha1990@gmail.com"><img src="./public/assets/gmail.png"
+                            alt="logo do gmail"></a>
+                    <a href="https://github.com/sheilaacunha/SheilaAcunha" target="_blank"><img
+                            src="./public/assets/discord.png" alt="logo do discord"></a>&nbsp;&nbsp;
+                    <a href="https://open.spotify.com/playlist/3Yen6Cw2UE8MnGWQCKEygO?si=5c6a5ea3fa4b4b53"
+                        target="_blank"><img src="./public/assets/spotify.png" alt="logo do spotify"></a>&nbsp;&nbsp;
+                    <a href="https://www.growdev.com.br/starter-2" target="_blank"><img
+                            src="./public/assets/growdev.svg" alt="logo da growdev"></a>&nbsp;&nbsp;
 
+                </nav>
             </article>
-
         </section>
         <section>
             <br>
-            <a href="#inicio"> Voltar ao inicio </a> ou <a href="figurinha.jpg" download> <i>baixe uma figurinha!!! </i>
+            <a href="#inicio"> Voltar ao inicio </a> ou <a href="./public/assets/figurinha.jpg" download> <i>baixe uma
+                    figurinha!!! </i>
             </a>
             <hr>
         </section>
